--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: power.he
 Type: Package
 Title: The R power.he package
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Author: Dylan Thibault and Sarah Wu
+Maintainer: The package maintainer <ssw47@duke.edu>
 Description: Calculate sample size or power for hierarchical endpoints. 
     The package can handle any type of outcomes (binary, continuous, count, 
     ordinal, time-to-event), and allows users to find power calculations for 
