--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: power.he
 Type: Package
-Title: The R power.he package
+Title: The R 'power.he' Package
 Version: 0.1.0
 Author: Dylan Thibault and Sarah Wu
-Maintainer: The package maintainer <ssw47@duke.edu>
+Maintainer: Sarah Wu <ssw47@duke.edu>
 Description: Calculate sample size or power for hierarchical endpoints. 
     The package can handle any type of outcomes (binary, continuous, count, 
     ordinal, time-to-event), and allows users to find power calculations for 
@@ -13,3 +13,4 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
+
