--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: The R 'powerHE' Package
 Version: 0.1.0
 Author: Dylan Thibault and Sarah Wu
-Maintainer: Sarah Wu <O2Eduke.edu>
+Maintainer: Sarah Wu <O2E@duke.edu>
 Description: Calculate sample size or power for hierarchical endpoints. 
     The package can handle any type of outcomes (binary, continuous, count, 
     ordinal, time-to-event), and allows users to find power calculations for 
