changed function name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,5 @@
-export(HE)
-export(format)
+export(powerHE)
+export(formatHE)
 importFrom("stats", "pnorm", "qnorm")
 importFrom("skellam", "pskellam.sp")
 
