--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,10 +5,12 @@ Version: 0.1.0
 Author: Dylan Thibault and Sarah Wu
 Maintainer: Sarah Wu <O2E@duke.edu>
 Description: Calculate sample size or power for hierarchical endpoints. 
-    The package can handle any type of outcomes (binary, continuous, count, 
-    ordinal, time-to-event), and allows users to find power calculations for 
-    win ratios, win odds, net benefits, and DOORs. Given a desired power, 
-    the package can calculate the sample size needed. 
+  The package can handle any type of outcomes (binary, continuous, count, ordinal, 
+  time-to-event) and any number of such endpoints. It allows users to calculate 
+  sample size with a given power or to calculate power with a given sample size 
+  for hypothesis testing based on win ratios, win odds, net benefit, or DOOR 
+  (desirability of outcome ranking) as treatment effect between two groups for 
+  hierarchical endpoints.
 License: GPL (>= 2)
 Encoding: UTF-8
 RoxygenNote: 7.3.2
