--- a/..Rcheck/powerHE/NAMESPACE
+++ b/..Rcheck/powerHE/NAMESPACE
@@ -1,1 +1,5 @@
-exportPattern("^[[:alpha:]]+")
+export(powerHE)
+export(formatHE)
+importFrom("stats", "pnorm", "qnorm")
+importFrom("skellam", "pskellam.sp")
+
