--- a/powerHE.Rcheck/powerHE/DESCRIPTION
+++ b/powerHE.Rcheck/powerHE/DESCRIPTION
@@ -2,8 +2,14 @@ Package: powerHE
 Type: Package
 Title: Power and Sample Size Calculations with Hierarchical Endpoints
 Version: 1.0.0
-Author: Sarah Wu [aut, cre], Dylan Thibault [aut]
-Maintainer: Sarah Wu <O2E@duke.edu>
+Authors@R: c(
+  person(given = "Sarah",
+         family = "Wu",
+         role = c("aut", "cre"),
+         email = "O2E@duke.edu"),
+  person(given = "Dylan",
+         family = "Thibault",
+         role = "aut"))
 Description: Calculate sample size or power for hierarchical endpoints. 
   The package can handle any type of outcomes (binary, continuous, count, ordinal, 
   time-to-event) and any number of such endpoints. It allows users to calculate 
@@ -16,5 +22,8 @@ Encoding: UTF-8
 RoxygenNote: 7.3.2
 Imports: skellam
 NeedsCompilation: no
-Packaged: 2025-01-28 17:02:12 UTC; sarahwu
-Built: R 4.4.0; ; 2025-01-28 17:03:10 UTC; unix
+Packaged: 2025-01-28 22:22:50 UTC; sarahwu
+Author: Sarah Wu [aut, cre],
+  Dylan Thibault [aut]
+Maintainer: Sarah Wu <O2E@duke.edu>
+Built: R 4.4.0; ; 2025-01-28 22:51:39 UTC; unix
