--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Description: Calculate sample size or power for hierarchical endpoints.
   sample size with a given power or to calculate power with a given sample size 
   for hypothesis testing based on win ratios, win odds, net benefit, or DOOR 
   (desirability of outcome ranking) as treatment effect between two groups for 
-  hierarchical endpoints.
+  hierarchical endpoints. The methods of this package are described further in 
+  the paper by Barnhart, H. X. et al. (2024, <doi:10.1080/19466315.2024.2365629>).
 License: GPL (>= 2)
 Encoding: UTF-8
 RoxygenNote: 7.3.2
